--- a/index.html
+++ b/index.html
@@ -45,6 +45,8 @@
     <div class="container">
         <a href="shop.html" class="button">Shop</a>
         <a href="deposit.html" class="button">Deposit</a>
+        <a href="settings.html" class="button">Settings</a>  <!-- Added Settings Button -->
     </div>
 </body>
 </html>
+
