--- a/men.html
+++ b/men.html
@@ -15,7 +15,7 @@
     <div class="products-container">
         <!-- Men's Blue Jacket -->
         <div class="product">
-            <img src="images/blue-jacket.jpg" alt="Men's Blue Jacket">
+            <img src="images/blue-jacket.jpg.jpg" alt="Men's Blue Jacket">
             <h2>Men's Blue Jacket</h2>
             <p>Price: ₹400</p>
             <label for="size-jacket">Size:</label>
@@ -29,7 +29,7 @@
 
         <!-- Men's Green Shirt -->
         <div class="product">
-            <img src="images/green-shirt.jpg" alt="Men's Green Shirt">
+            <img src="images/green-shirt.jpg.jpg" alt="Men's Green Shirt">
             <h2>Men's Green Shirt</h2>
             <p>Price: ₹300</p>
             <label for="size-green-shirt">Size:</label>
@@ -43,7 +43,7 @@
 
         <!-- Men's Blue T-Shirt -->
         <div class="product">
-            <img src="images/blue-tshirt.jpg" alt="Men's Blue T-Shirt">
+            <img src="images/blue-tshirt.jpg.jpg" alt="Men's Blue T-Shirt">
             <h2>Men's Blue T-Shirt</h2>
             <p>Price: ₹250</p>
             <label for="size-blue-tshirt">Size:</label>
@@ -57,7 +57,7 @@
 
         <!-- Men's Jeans -->
         <div class="product">
-            <img src="images/jeans.jpg" alt="Men's Jeans">
+            <img src="images/jeans.jpg.jpg" alt="Men's Jeans">
             <h2>Men's Jeans</h2>
             <p>Price: ₹475</p>
             <label for="size-jeans">Size:</label>
@@ -71,7 +71,7 @@
 
         <!-- Men's Hoodie -->
         <div class="product">
-            <img src="images/hoodie.jpg" alt="Men's Hoodie">
+            <img src="images/hoodie.jpg.jpg" alt="Men's Hoodie">
             <h2>Men's Hoodie</h2>
             <p>Price: ₹450</p>
             <label for="size-hoodie">Size:</label>
@@ -85,7 +85,7 @@
 
         <!-- Men's Blue Shirt -->
         <div class="product">
-            <img src="images/blue-shirt.jpg" alt="Men's Blue Shirt">
+            <img src="images/blue-shirt.jpg.jpg" alt="Men's Blue Shirt">
             <h2>Men's Blue Shirt</h2>
             <p>Price: ₹375</p>
             <label for="size-blue-shirt">Size:</label>
