--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     </style>
 </head>
 <body>
-    <img src="LOGO.jpg" alt="ThreadCo Logo" class="logo">
+    <img src="logo.jpg.jpg" alt="ThreadCo Logo" class="logo">
     <div class="container">
         <a href="shop.html" class="button">Shop</a>
         <a href="deposit.html" class="button">Deposit</a>
