--- a/women.html
+++ b/women.html
@@ -14,7 +14,7 @@
 
     <section class="products">
         <div class="product">
-            <img src="images/womens-full-sleeve-top.jpg" alt="Women's Full Sleeve Top">
+            <img src="images/womens-full-sleeve-top.jpg.jpg" alt="Women's Full Sleeve Top">
             <h2>Women's Full Sleeve Top</h2>
             <p>Price: ₹450</p>
             <label for="size1">Size:</label>
@@ -27,7 +27,7 @@
         </div>
 
         <div class="product">
-            <img src="images/womens-jacket.jpg" alt="Women's Jacket">
+            <img src="images/womens-jacket.jpg.jpg" alt="Women's Jacket">
             <h2>Women's Jacket</h2>
             <p>Price: ₹475</p>
             <label for="size2">Size:</label>
@@ -40,7 +40,7 @@
         </div>
 
         <div class="product">
-            <img src="images/womens-jeans.jpg" alt="Women's Jeans">
+            <img src="images/womens-jeans.jpg.jpg" alt="Women's Jeans">
             <h2>Women's Jeans</h2>
             <p>Price: ₹500</p>
             <label for="size3">Size:</label>
@@ -53,7 +53,7 @@
         </div>
 
         <div class="product">
-            <img src="images/womens-skirt.jpg" alt="Women's Skirt">
+            <img src="images/womens-skirt.jpg.jpg" alt="Women's Skirt">
             <h2>Women's Skirt</h2>
             <p>Price: ₹350</p>
             <label for="size4">Size:</label>
@@ -66,7 +66,7 @@
         </div>
 
         <div class="product">
-            <img src="images/womens-kurti-set.jpg" alt="Women's Kurti Set">
+            <img src="images/womens-kurti-set.jpg.jpg" alt="Women's Kurti Set">
             <h2>Women's Kurti Set</h2>
             <p>Price: ₹550</p>
             <label for="size5">Size:</label>
