--- a/kids.html
+++ b/kids.html
@@ -15,7 +15,7 @@
         <h1>Kids Collection</h1>
         <div class="products">
             <div class="product">
-                <img src="boys_tshirt.jpg" alt="Boys T-shirt">
+                <img src="boys-tshirt.jpg.jpg" alt="Boys T-shirt">
                 <h2>Boys T-shirt</h2>
                 <p>Price: ₹175</p>
                 <select class="size">
@@ -26,7 +26,7 @@
                 <button class="add-to-cart" data-name="Boys T-shirt" data-price="175">Add to Cart</button>
             </div>
             <div class="product">
-                <img src="girls_top.jpg" alt="Girls Top">
+                <img src="girls-top.jpg.jpg" alt="Girls Top">
                 <h2>Girls Top</h2>
                 <p>Price: ₹175</p>
                 <select class="size">
@@ -37,7 +37,7 @@
                 <button class="add-to-cart" data-name="Girls Top" data-price="175">Add to Cart</button>
             </div>
             <div class="product">
-                <img src="boys_sweatshirt.jpg" alt="Boys Sweatshirt">
+                <img src="boys-sweatshirt.jpg.jpg" alt="Boys Sweatshirt">
                 <h2>Boys Sweatshirt</h2>
                 <p>Price: ₹350</p>
                 <select class="size">
@@ -48,7 +48,7 @@
                 <button class="add-to-cart" data-name="Boys Sweatshirt" data-price="350">Add to Cart</button>
             </div>
             <div class="product">
-                <img src="girls_dress.jpg" alt="Girls Dress">
+                <img src="girls-dress.jpg.jpg" alt="Girls Dress">
                 <h2>Girls Dress</h2>
                 <p>Price: ₹300</p>
                 <select class="size">
@@ -59,7 +59,7 @@
                 <button class="add-to-cart" data-name="Girls Dress" data-price="300">Add to Cart</button>
             </div>
             <div class="product">
-                <img src="boys_jacket.jpg" alt="Boys Jacket">
+                <img src="boys-jacket.jpg.jpg" alt="Boys Jacket">
                 <h2>Boys Jacket</h2>
                 <p>Price: ₹350</p>
                 <select class="size">
